--- a/templates.yaml
+++ b/templates.yaml
@@ -1,8 +1,10 @@
 welcome: How long did your workout take?
 
-welcome_reprompt: I didn't catch that. How long did your workout take?
+welcome_reprompt: I didn't catch that. How many minutes did your workout take?
 
-run_duration: OK, {{ minutes }} minutes and {{ seconds }} seconds.
+run_minutes: OK, {{ minutes }} minutes. And how many seconds did your workout take?
+
+run_seconds: OK, {{ seconds }} seconds.
 
 run_logged: Your workout has been logged.
 
